--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <span style="color: #ff2d20">Laravel</span>
           </h2>
           <p class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
-            A group of artisans that talk about Laravel a lot and usually meet in Lancaster, Pennsylvania. Currently meeting online.
+            A group of artisans that talk about Laravel a lot and usually meet in Lancaster, Pennsylvania.
           </p>
         </div>
       </div>
@@ -26,108 +26,6 @@
   </header>
 
   <main>
-    <div class="relative py-16 bg-white overflow-hidden">
-      <div class="relative px-4 sm:px-6 lg:px-8">
-        <div class="text-lg max-w-prose mx-auto mb-6">
-          <p class="text-base text-center leading-6 text-gray-600 font-semibold tracking-wide uppercase">
-            Next Meetup
-          </p>
-          <div id="event-name-skeleton" class="mt-2 text-center">
-            <span class="text-transparent bg-gray-800 rounded text-2xl leading-8 tracking-tight sm:text-3xl sm:leading-10">
-              Example Event Name Placeholder
-            </span>
-          </div>
-          <h1 id="event-name" hidden class="mt-2 text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"></h1>
-        </div>
-        <div class="prose prose-lg text-gray-500 mx-auto">
-          <span id="event-description">
-            <span class="mt-1 w-full h-6 block bg-gray-400 rounded"></span>
-            <span class="mt-2 mb-8 w-3/4 h-6 block bg-gray-400 rounded"></span>
-          </span>
-
-          <div class="flex items-center">
-            <div class="flex items-center">
-              <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-              </svg>
-              <span id="event-day" class="ml-1">
-                <span class="text-transparent bg-gray-400 rounded-full">Jan 31</span>
-              </span>
-            </div>
-
-            <div class="ml-4 flex items-center">
-              <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-              </svg>
-              <span id="event-time" class="ml-1">
-                <span class="text-transparent bg-gray-400 rounded-full">12:00am</span>
-              </span>
-            </div>
-
-            <span class="ml-auto inline-flex rounded-md shadow-sm">
-              <a id="event-link" disabled title="Join up to 15 minutes earlier than the start of the meetup."
-                class="cursor-not-allowed inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-blue-400"
-                active-classes="inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-blue-700 focus:shadow-outline-blue active:bg-blue-700 transition ease-in-out duration-150">
-                <svg class="-ml-1 mr-3 h-5 w-5" viewBox="0 0 20 20" fill="#fff">
-                  <path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path>
-                </svg>
-                <span class="text-white">Join</span>
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script>
-      fetch('/api')
-        .then(res => res.json())
-        .then(({ next_meetup }) => {
-          if (next_meetup.link !== null) {
-            const eventLink = document.getElementById('event-link')
-            eventLink.setAttribute('href', next_meetup.link)
-            const eventLinkActiveClasses = eventLink.getAttribute('active-classes')
-            eventLink.setAttribute('class', eventLinkActiveClasses)
-          }
-
-          document.getElementById('event-name').innerText = next_meetup.name
-          document.getElementById('event-name-skeleton').remove()
-          document.getElementById('event-name').hidden = false
-
-          document.getElementById('event-description').innerHTML = next_meetup.description
-
-          const months = [
-            'Jan',
-            'Feb',
-            'Mar',
-            'Apr',
-            'May',
-            'Jun',
-            'Jul',
-            'Aug',
-            'Sep',
-            'Oct',
-            'Nov',
-            'Dec',
-          ]
-
-          const eventTime = new Date(next_meetup.time)
-          const month = months[eventTime.getMonth()]
-          const day = eventTime.getDate()
-          const date = `${month} ${day}`
-
-          let hour = eventTime.getHours()
-          let period = 'am'
-          if (hour > 12) {
-            hour = hour - 12
-            period = 'pm'
-          }
-          const minute = eventTime.getMinutes()
-          const time = `${hour}:${minute}${period}`
-
-          document.getElementById('event-day').innerText = date
-          document.getElementById('event-time').innerText = time
-        })
-    </script>
   </main>
 
   <footer class="max-w-screen-xl w-full mx-auto mt-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
